--- a/sito-web-laboratorio/styles/comeArrivare_styles.css
+++ b/sito-web-laboratorio/styles/comeArrivare_styles.css
@@ -1,3 +1,13 @@
+:root {
+  --primary-font: "Fredoka", cursive;
+  --secondary-font: "Unkempt", cursive;
+  --base-font-size: 16px;
+  --text-color: #ffffff;
+  --accent-color: #ff4500;
+  --border-color: #8b0000;
+  --bg-dark: rgba(0, 0, 0, 0.7);
+}
+
 body {
   color: rgb(230, 230, 230);
 }
@@ -9,7 +19,6 @@ body {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
 }
 
 .transport-options {
@@ -77,8 +86,28 @@ h3 {
 
 main {
   font-family: "Unkempt", cursive;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  #mappaEvento {
+    width: 100%;
+    height: 400px;
+  }
+  
+  .transport-options {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .transport-info {
+    width: 90%;
+  }
+}
+
+* {
+  user-select: all;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
 }
