--- a/sito-web-laboratorio/styles/cosplay_styles.css
+++ b/sito-web-laboratorio/styles/cosplay_styles.css
@@ -77,6 +77,11 @@
   padding: 20px;
 }
 
+.gallery-item {
+  position: relative;
+  overflow: hidden;
+}
+
 .gallery-item img {
   width: 100%;
   height: 300px;
